fixed overflow issues

--- a/src/App.css
+++ b/src/App.css
@@ -38,9 +38,6 @@
 }
 
 .centered {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  /* bring your own prefixes */
-  transform: translate(-50%, -50%);
+  text-align: center;
+  overflow: auto;
 }
