--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow: auto;
+  height: 100%;
+  overflow-y: scroll;
 }
 
 code {
